k8s/00-qux-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: quant-ux
  labels:
    name: quant-ux
