k8s/04-qux-mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-ux-mongo
  namespace: quant-ux
  labels:
    app: quant-ux-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quant-ux-mongo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: quant-ux-mongo
    spec:
      containers:
        - image: mongo
          name: quant-ux-mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: quant-ux-mongo-claim0
      restartPolicy: Always
      volumes:
        - name: quant-ux-mongo-claim0
          persistentVolumeClaim:
            claimName: quant-ux-mongo-claim0
