k8s/12-qux-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-ux-websocket
  namespace: quant-ux
  labels:
    app: quant-ux-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quant-ux-websocket
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: quant-ux-websocket
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: quant-ux-ws-configmap
          image: klausenschaefersinho/quant-ux-websocket
          name: quant-ux-websocket-server
          ports:
            - containerPort: 8086
      restartPolicy: Always
