k8s/15-qux-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-ux-frontend
  namespace: quant-ux
  labels:
    app: quant-ux-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quant-ux-frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: quant-ux-frontend
    spec:
      containers:
        - envFrom:
          - configMapRef:
              name: quant-ux-fe-configmap
          image: klausenschaefersinho/quant-ux
          name: quant-ux-frontend
          ports:
            - containerPort: 8082
      restartPolicy: Always
