k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
    app.kubernetes.io/component: mongo
    app.kubernetes.io/instance: mongo
    app.kubernetes.io/name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
      deploymentconfig: mongo
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: mongo
        deploymentconfig: mongo
    spec:
      containers:
        - image: mongo
          name: mongo
          ports:
            - containerPort: 27017
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-claim0
      restartPolicy: Always
      volumes:
        - name: mongo-claim0
          persistentVolumeClaim:
            claimName: mongo-claim0
status: {}
