k8s/qux-ws-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quant-ux-websocket
  labels:
    app: quant-ux-websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quant-ux-websocket
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: quant-ux-websocket
    spec:
      containers:
        - env:
            - name: QUX_SERVER
              value: http://quant-ux-backend:8080/
            - name: QUX_SERVER_PORT
              value: "8086"
          image: klausenschaefersinho/quant-ux-websocket
          name: quant-ux-websocket-server
          ports:
            - containerPort: 8086
      restartPolicy: Always
