k8s/03-qux-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-mongo
  namespace: quant-ux
  labels:
    app: quant-ux-mongo
spec:
  selector:
      app: quant-ux-mongo
  ports:
    - name: "27017-tcp"
      protocol: TCP
      port: 27017
      targetPort: 27017
  internalTrafficPolicy: Local
  type: ClusterIP
