k8s/08-qux-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-backend
  namespace: quant-ux
  labels:
    app: quant-ux-backend
spec:
  selector:
    app: quant-ux-backend
  ports:
    - name: "8080-tcp"
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Local
  type: ClusterIP
