k8s/11-qux-ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-websocket
  namespace: quant-ux
  labels:
    app: quant-ux-websocket
spec:
  selector:
    app: quant-ux-websocket
  ports:
    - name: "8086-tcp"
      protocol: TCP
      port: 8086
      targetPort: 8086
  externalTrafficPolicy: Local
  type: LoadBalancer
