k8s/14-qux-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-frontend
  namespace: quant-ux
  labels:
    app: quant-ux-frontend
spec:
  selector:
    app: quant-ux-frontend
  ports:
    - name: "8082-tcp"
      protocol: TCP
      port: 8082
      targetPort: 8082
  externalTrafficPolicy: Local
  type: LoadBalancer
