k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-mongo
  labels:
    app: quant-ux-mongo
spec:
  ports:
    - name: "27017-tcp"
      protocol: TCP
      port: 27017
      targetPort: 27017
  internalTrafficPolicy: Cluster
  selector:
    app: quant-ux-mongo
