k8s/qux-be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-backend
  labels:
    app: quant-ux-backend
spec:
  ports:
    - name: "8080-tcp"
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quant-ux-backend
