k8s/qux-fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quant-ux-frontend
  labels:
    app: quant-ux-frontend
    app.kubernetes.io/component: quant-ux-frontend
    app.kubernetes.io/instance: quant-ux-frontend
    app.kubernetes.io/name: quant-ux-frontend
spec:
  type: NodePort
  selector:
    app: quant-ux-frontend
    deploymentconfig: quant-ux-frontend
  ports:
    - name: "8082-tcp"
      protocol: TCP
      port: 8082
      targetPort: 8082
status:
  loadBalancer: {}
