k8s/01-qux-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: quant-ux
spec:
  rules:
    - host: quant-ux.local # change to the same domain that the external dns server is resolving to the external Ingress IP.
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: quant-ux-frontend
                port:
                  number: 8082
          - pathType: Prefix
            path: /ws
            backend:
              service:
                name: quant-ux-websocket
                port:
                  number: 8086
