k8s/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: quant-ux.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: quant-ux-frontend
                port:
                  number: 8082
          - pathType: Prefix
            path: /ws
            backend:
              service:
                name: qux-ws
                port:
                  number: 8086
